# python-template

./: Dockerfile  Justfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
docs/: README_ZH.md
