[project]
name = "python-repo-template"
version = "0.0.1"
description = "A template for Python projects"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Giovanni Giacometti", email = "giovanni.giacometti5@gmail.com" } ]
requires-python = ">=3.12"
dependencies = [
    "apollo-python>=1.1.5",
    "curl-cffi>=0.12.0",
    "loguru>=0.7.3",
    "regex>=2024.11.6",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]
